add dependency for commons-text for isBlank function
Former-commit-id: 713fedc0b193d90bf1ea2abdf069e4c61c677b6f